@@ -143,14 +143,18 @@ src_libmingwex=\
   misc/mingw_usleep.c  misc/mingw_output_format.c \
   \
   stdio/mingw_pformat.h \
-  stdio/atoll.c           stdio/_Exit.c          stdio/_findfirst64i32.c  stdio/_findnext64i32.c  stdio/fopen64.c          \
-  stdio/fseeko64.c        stdio/_fstat64i32.c    stdio/ftello64.c         stdio/_fwstat64i32.c    stdio/lltoa.c            \
-  stdio/lltow.c           stdio/lseek64.c        stdio/mingw_fprintf.c    stdio/mingw_pformat.c   stdio/mingw_printf.c     \
-  stdio/mingw_snprintf.c  stdio/mingw_sprintf.c  stdio/mingw_vfprintf.c   stdio/mingw_vprintf.c   stdio/mingw_vsnprintf.c  \
-  stdio/mingw_vsprintf.c  stdio/snprintf.c       stdio/snwprintf.c        stdio/strtof.c          stdio/ulltoa.c           \
-  stdio/ulltow.c          stdio/vfscanf.c        stdio/vfwscanf.c         stdio/vscanf.c          stdio/vsnprintf.c        \
-  stdio/vsnwprintf.c      stdio/vsscanf.c        stdio/vswscanf.c         stdio/vwscanf.c         stdio/wcstof.c           \
-  stdio/wtoll.c libsrc/mingwthrd_nomt.c
+  stdio/atoll.c           stdio/_Exit.c          stdio/_findfirst64i32.c  stdio/_wfindfirst64i32.c stdio/_findnext64i32.c  \
+  stdio/_wfindnext64i32.c stdio/fopen64.c        stdio/fseeko64.c         stdio/_fstat64i32.c     stdio/_fstat.c           \
+  stdio/_stat64i32.c      stdio/_stat.c          stdio/ftello64.c         stdio/_wstat64i32.c     stdio/_wstat.c           \
+  stdio/lltoa.c           stdio/lltow.c          stdio/lseek64.c          \
+  stdio/mingw_fprintf.c   stdio/mingw_pformat.c  stdio/mingw_printf.c     stdio/mingw_snprintf.c  stdio/mingw_sprintf.c    \
+  stdio/mingw_vfprintf.c  stdio/mingw_vprintf.c  stdio/mingw_vsnprintf.c  stdio/mingw_vsprintf.c  stdio/snprintf.c         \
+  stdio/snwprintf.c       \
+  stdio/strtof.c          stdio/ulltoa.c         stdio/ulltow.c           \
+  stdio/vfscanf.c         stdio/vfwscanf.c       stdio/vscanf.c           stdio/vsnprintf.c       stdio/vsnwprintf.c       \
+  stdio/vsscanf.c         \
+  stdio/vswscanf.c        stdio/vwscanf.c        stdio/wcstof.c           stdio/wtoll.c           \
+  libsrc/mingwthrd_nomt.c
 
 # these only go into the 64 bit version:
 src_libmingwex64=\
